  public buckets will be accessible.
- Fixed a bug that prevented Synchronize from recognizing duplicate file names
  when uploading to an S3 subdirectory path when using the --batch option.  
- Synchronize will now prompt for HTTP Proxy login credentials if required. If
  proxy credentials are pre-specified in the jets3t.properties file, you should
  not be prompted.


TOOLKIT

  * General

- Added initial implementation of CloudFront service.
- Added property "cloudfront-service.internal-error-retry-max" for defining the
  retry limit for CloudFront internal service errors.
- Added support for configuring and accessing Requester Pays buckets.
- Added property "httpclient.requester-pay-buckets-enabled" for defining whether
  the RestS3Service supports Requester Pays buckets by default.
- Improved support for accessing S3 using DevPay credentials with a new
  credentials class for defining and storing these credentials: 
  AWSDevPayCredentials
- Added a class (AWSDevPayProduct) to represent a DevPay product, and to load 
  information about pre-defined products from the properties file 
  devpay_products.properties.
- Improved the interpretation of .jets3t-ignore files so that child paths or
  arbitrary paths can be specified and ignored. For example, to ignore all CVS
  directories you can now add a single ignore path at the top level: **/CVS

  * REST Implementation

- Added support for proxy authentication settings in jets3t.properties:
  "proxy-user", "proxy-password", and "proxy-domain"
- The service's HTTP proxy settings can be updated an reapplied on-demand using
  a range of #initHttpProxy methods.
- Added property settings to allow the default HTTP and HTTPS ports to be 
  changed, which can be handy when running the service through a proxy for 
  testing: s3service.s3-endpoint-http-port, s3service.s3-endpoint-https-port
- The HttpConnectionManager and HttpClient objects used by the REST service can